修改删除服务内逻辑bug，更改swagger文档
